# smart-home-agent

./: .gitignore  main.py  pyproject.toml  run-agent.sh
src/: agent.py
